# piano-fingering

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
cmake/: Cloc.cmake  CodeCoverage.cmake  CompilerFlags.cmake  Complexity.cmake  Dependencies.cmake  Documentation.cmake  Formatting.cmake  Packaging.cmake  StaticAnalysis.cmake  Vale.cmake
docs/: Doxyfile.in  SRS.md  piano_fingering_analysis.md  pianofingering_problem.md
docs/specs/: 00-system-overview.md  01-decisions-log.md
docs/specs/modules/: cli.md  config.md  domain.md  engine.md  evaluator.md  generator.md  musicxml.md  optimizer.md  parser.md
include/config/: algorithm_parameters.h  config.h  config_manager.h  configuration_error.h  distance_matrix.h  finger_pair.h  finger_pair_distances.h  preset.h  rule_weights.h
include/domain/: finger.h  fingering.h  hand.h  measure.h  metadata.h  note.h  piece.h  pitch.h  slice.h  time_signature.h
include/evaluator/: rules.h  score_evaluator.h
include/parser/: musicxml_parser.h  parser_error.h  pitch_mapping.h
src/: CMakeLists.txt  main.cpp
src/config/: config_manager.cpp  embedded_presets.cpp
src/evaluator/: rules.cpp  score_evaluator.cpp
src/parser/: musicxml_parser.cpp
tests/: CMakeLists.txt  placeholder_test.cpp
tests/baseline/: baseline_scores.json  czerny_op821_1.musicxml  czerny_op821_37.musicxml  czerny_op821_38.musicxml  czerny_op821_54.musicxml  czerny_op821_62.musicxml  czerny_op821_66.musicxml  czerny_op821_96.musicxml  generate_baseline_scores.py  piano_fingering_scorer.py  poly_test.musicxml
tests/config/: algorithm_parameters_test.cpp  config_manager_test.cpp  config_test.cpp  configuration_error_test.cpp  distance_matrix_test.cpp  finger_pair_distances_test.cpp  finger_pair_test.cpp  preset_test.cpp  rule_weights_test.cpp
tests/domain/: finger_test.cpp  fingering_test.cpp  hand_test.cpp  measure_test.cpp  note_test.cpp  piece_test.cpp  pitch_test.cpp  slice_test.cpp  time_signature_test.cpp
tests/evaluator/: rules_test.cpp  score_evaluator_test.cpp
tests/parser/: golden_set_test.cpp  musicxml_parser_test.cpp  pitch_mapping_test.cpp
